tests/snapshots/integration__integration_tests__merge__merge_squash_with_llm.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
    - "--squash"
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
    WORKTRUNK_LLM__ARGS: "feat: implement user authentication system"
    WORKTRUNK_LLM__COMMAND: echo
---
success: true
exit_code: 0
----- stdout -----
🔄 [36mSquashing 2 commits into one...[0m
✅ [32mSquashed 2 commits into one[0m
🔄 [36mRebasing onto [1m[36mmain[0m...[0m
🔄 [36mPushing 1 commit to [1m[36mmain[0m @ [SHA][0m

* [SHA] (HEAD -> feature) Squash commits from main

✅ [32mPushed to [1m[32mmain[0m[0m
🔄 [36mCleaning up worktree...[0m
✅ [32mRemoved worktree and returned to primary[0m
  [2mPath: [REPO][0m

To enable automatic cd, run: wt configure-shell

----- stderr -----
🟡 [33mLLM generation failed, using deterministic message[0m
