tests/snapshots/integration__integration_tests__merge__merge_to_non_default_target.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - staging
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_COUNT: "1"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_KEY_0: advice.mergeConflict
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_CONFIG_VALUE_0: "false"
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----
🔄 [36mRebasing onto [1m[36mstaging[0m[36m...[0m
✅ [32mRebased onto [1m[32mstaging[0m[0m
🔄 [36mMerging 1 commit to [1m[36mstaging[0m[36m @ [2m[SHA][0m (no commit/squash needed)
[100m [0m  * [SHA][33m ([m[1;36mHEAD[m[33m -> [m[1;32mfeature-for-staging[m[33m)[m Add feature for staging
[100m [0m   feature.txt | 1 [32m+[m
[100m [0m   1 file changed, 1 insertion(+)
✅ [32mMerged to [1m[32mstaging[0m[0m (1 commit, 1 file, [32m+1[0m)
🔄 [36mRemoving worktree & branch...[0m
✅ [32mRemoved worktree & branch for [1m[32mfeature-for-staging[0m[32m, changed directory to [1m[32m[REPO][0m[0m

----- stderr -----
